# admission-scraper

./: .env.example  .gitignore  Makefile  README.md  base_prompt.txt  cleanup.py  config.py  justfile  main.py  pyproject.toml  requirements.txt
admission_scraper/: settings.py
admission_scraper/utils/: page.py
data/: central_uni.csv  deemed_to_be.csv  gujarat_uni.csv  private_uni.csv  refine_data.py  state_uni.csv
db/: models.py  seed.py  session.py
llm/: __init__.py  base.py  gemini.py  process.py  schema.py
llm/providers/: gemini.py  groq.py
scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraper/spiders/: pages.py  uni.py
scraper/utils/: __init__.py  generic.py  page.py  pdf.py
