[project]
name = "admission-scraper"
version = "0.1.0"
description = "This project is designed to automate the collection, processing, and storage of university admission announcements."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "click>=8.3.1",
    "google-genai>=1.10.0",
    "groq>=0.22.0",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "psycopg2-binary>=2.9.10",
    "pymupdf4llm>=0.0.22",
    "python-dotenv>=1.1.0",
    "scrapy>=2.12.0",
    "sqlalchemy>=2.0.40",
]
