[project]
name = "admission-scraper"
version = "0.1.0"
description = "This project is designed to automate the collection, processing, and storage of university admission announcements."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "google-genai>=1.66.0",
    "groq>=1.0.0",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pymupdf-layout>=1.27.1",
    "pymupdf4llm>=0.3.4",
    "scrapy>=2.14.1",
    "sqlalchemy>=2.0.48",
]
