[project]
name = "admission-scraper"
version = "0.1.0"
description = "This project is designed to automate the collection, processing, and storage of university admission announcements."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.3",
    "google-genai>=2.0.1",
    "groq>=1.2.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pymupdf-layout>=1.27.2",
    "pymupdf4llm>=1.27.2",
    "scrapy>=2.15.2",
    "rapidfuzz>=3.14.5",
    "sqlalchemy>=2.0.49",
]
